lab1/Test/L1-A-7-62.cmm
float ;
int ;
struct s2DEMrbwkOlNxL Pg5jqP ( int kq5qjB0QWbWmPEOn 
  , struct rgfQ7FRki1uupMyVwZcR WF8gTi5GoRayw2DD ) {
  struct {
  }FcKBUok_ZiWFkR2ghInP , uW3_sOFx = _Tfb ^;
  if ( M56LOg )   return xaqCTNF_KLgapkSvJSkH = Ul 
    < sXmciccvDwTBq_ - sYgH24gm60 / JEA0 ( FqUum_Kx || 
    k2_ && wFeS7TD != mo0wytGUHXA69c + J3gnjaNOfjn4Xg 
    * ! - ! Engz [ h8futiWzlFQPOOyrzTIZ - Db_F ( PyKma 
    , k5wh0AySV7eUDp , kG && kY8ice1 >= UD856_ij ( ( itfo5TZjtsIq0faM6 
    == s63o6JPzhnRp_ * 803305525.888262871 ) > 2114264115 
    ) ) <= @! VHC == D5_HPDSxA ( ) ] . xva5c4J ) ;

}
int d6SBTOFExZEsMvqdil , iQcCmKKt3jwidOpw [ 1041827561 
  ] 

;
int tK58ZMEb ( ) {
`}
int ;
struct WDWkgqfh0jsMKakw6aE {
}qLqFvI3d8jSW 
;
int ;
int ;
int ElHTiLjiDsk8npWY ( ) ${
}
int ;
int HDAm ( ) {
  bv7GuN1GGAd1mfxHbmD ;
  mM32xmP ;
  if ( hY58 )   panUZJ ;
else   if ( meQWPQt_yko )   while ( MuiWZn6kKb ) {
    if ( uUHjR )     N8iegMcfc07uWUJun ;
else     d ;

  }


&  YXGCEyainhr8 ;
}
